samples/_failures_safe/1761726515_e6ec45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1cf9d3a.c: In function ‘main’:
./samples/SAFE/__tmp_f1cf9d3a.c:157:5: error: expected declaration or statement at end of input
  157 |     if (!decompress_rle(compressed.data, compressed.size, &decompressed)) {
      |     ^~
./samples/SAFE/__tmp_f1cf9d3a.c:157:5: error: expected declaration or statement at end of input
